feat(NOT-000): Minor clean up of the specification & access controls (#113)
* fix(NOT-000): Adding minor update to access controls

* feat(NOT-000): Capitalization of notificationId -> notificationID, externalUserId -> externalUserID
