# src/lambdas/flex/http.getNotificationById/handler.ts
@@ -30,7 +30,7 @@ const requestBodySchema = z.any();
     "requestTimeEpoch": 1428582896000
   },
   "pathParameters": {
-    "notificationId": "12342"
+    "notificationID": "12342"
   }  
 }
 */
@@ -61,13 +61,17 @@ export class GetFlexNotificationById extends FlexAPIHandler<typeof requestBodySc
       throw new httpErrors.Unauthorized();
     }
 
-    const notificationId = event.pathParameters?.notificationId;
-    if (!notificationId) {
+    // Extract details
+    const notificationID = event.pathParameters?.notificationID;
+    const externalUserID = event.queryStringParameters?.externalUserID;
+
+    // Handle missing path param
+    if (!notificationID) {
       this.observability.logger.info('Notification Id has not been provided.');
       throw new httpErrors.BadRequest();
     }
 
-    const notification = await this.notificationsDynamoRepository.getRecord(notificationId);
+    const notification = await this.notificationsDynamoRepository.getRecord(notificationID);
 
     // Handle not found or hidden notifications
     if (!notification) {
@@ -79,6 +83,11 @@ export class GetFlexNotificationById extends FlexAPIHandler<typeof requestBodySc
       throw new httpErrors.NotFound();
     }
 
+    // Handle user not being the owner of the notification
+    if (notification.ExternalUserID !== externalUserID) {
+      throw new httpErrors.NotFound();
+    }
+
     // If message is marked as hidden - return 404
     const notificationResponse = IMessageRecordToIFlexNotification(notification);
 
@@ -86,7 +95,7 @@ export class GetFlexNotificationById extends FlexAPIHandler<typeof requestBodySc
       throw new httpErrors.NotFound();
     }
 
-    this.observability.logger.info('Successful request.', { notificationId });
+    this.observability.logger.info('Successful request.', { notificationID });
 
     return {
       body: notificationResponse,
