# src/lambdas/flex/http.getNotifications/handler.ts
@@ -62,14 +62,17 @@ export class GetNotifications extends FlexAPIHandler<typeof requestBodySchema, t
       throw new httpErrors.Unauthorized();
     }
 
-    const externalUserId = event.queryStringParameters?.externalUserId;
-    if (!externalUserId) {
+    // Extract details
+    const externalUserID = event.queryStringParameters?.externalUserID;
+
+    // Handle missing query param
+    if (!externalUserID) {
       throw new httpErrors.BadRequest();
     }
 
     const notifications = await this.notificationsDynamoRepository.getRecords<IMessageRecord>({
       field: 'ExternalUserID',
-      value: externalUserId,
+      value: externalUserID,
     });
 
     return {
